--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ body {
 
 #content {
     height: 25rem;
-    margin: 5rem;
+    margin: 5rem 10rem;
     padding: 2rem;
     border: 1px solid rgb(128, 93, 93);
     border-radius: 8px;
@@ -36,7 +36,7 @@ body {
 
     display: grid;
     grid-template-columns: 1fr 4fr;
-
+    overflow: auto;
 }
 
 h1 {
@@ -67,7 +67,7 @@ ul {
 li {
     padding-bottom: 0.5rem;
     text-align: center;
-    padding-right: 5rem;
+    padding-right: 3.5rem;
 }
 
 li:hover {
